# fpt_aptech

./: CMakeLists.txt  README  common.h
lab10/: 02_prefix.c  03_temperature.c
lab7/: phonecard.c
lab8/: CMakeLists.txt  reverse.c
lab9/: CMakeLists.txt  factorial.c  square.c
lab9/extra/: 02_fives.c  03_square.c  04_vowel.c  06_prime.c  08_reverse.c
src/: CMakeLists.txt  common.h  concatenate.c  matrix.c  reverse.c
src/assignment/: CMakeLists.txt  exam.c  exam.h  main.c  qa.h
src/lab10/: 01_occurences.c  fraction.c
src/lab7/: CMakeLists.txt
src/lab8/: concatenate.c  matrix.c
src/lab9/: circle.c
src/lab9/extra/: 01_sum.c  05_sum_array.c
