add_executable(square square.c)
add_executable(circle circle.c)
add_executable(factorial factorial.c)
add_executable(01_sum extra/01_sum.c)
add_executable(02_fives extra/02_fives.c)
add_executable(03_square extra/03_square.c)
add_executable(04_vowel extra/04_vowel.c)
add_executable(05_fives extra/05_fives.c)
add_executable(06_fives extra/06_fives.c)
add_executable(07_fives extra/07_fives.c)
add_executable(08_fives extra/08_fives.c)
add_executable(09_fives extra/09_fives.c)
add_executable(10_fives extra/10_fives.c)
