add_executable(square square.c)
add_executable(circle circle.c)
add_executable(factorial factorial.c)
add_executable(01_sum extra/01_sum.c)
add_executable(02_fives extra/02_fives.c)
add_executable(03_square extra/03_square.c)
add_executable(04_vowel extra/04_vowel.c)
add_executable(05_sum_array extra/05_sum_array.c)
add_executable(06_prime extra/06_prime.c)
add_executable(08_reverse extra/08_reverse.c)
